# bidguard

./: .gitignore  BUILD.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
app-design/: README.md
app-design/project/: index.html  企业版 (旧).html  原本-个人通用版 (旧).html
app-design/project/scraps/: sketch-2026-05-26T13-08-39-tua1b3.napkin
app-design/project/src/: app.jsx  frames.jsx  screens-a.jsx  screens-b.jsx  shell.jsx  tokens.jsx
app-design/project/src/c/: app.jsx  bid-a.jsx  bid-app.jsx  bid-b.jsx  bid-c.jsx  frames.jsx  screens.jsx  shell.jsx  tokens.jsx
docs/: multi_document_compare_react_tauri_arch_design.md
src/: App.tsx  engine.ts  index.css  main.tsx  prefs.ts  repaint.ts  routes.ts  starred.ts  templates.ts  theme.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  export.rs  lib.rs  main.rs  state.rs  store.rs  test_fixtures.rs
src-tauri/src/commands/: annotation.rs  compare.rs  document.rs  export.rs  job.rs  mod.rs  settings.rs  workspace.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/db/repo/: annotation_repo.rs  chunk_repo.rs  compare_repo.rs  document_repo.rs  embedding_repo.rs  fact_repo.rs  job_repo.rs  mod.rs  settings_repo.rs  template_repo.rs  workspace_repo.rs
src-tauri/src/engine/: candidate.rs  chunker.rs  clustering.rs  collusion.rs  corpus.rs  diff.rs  embed.rs  fact.rs  features.rs  fingerprint.rs  matrix.rs  mod.rs  normalize.rs  ocr.rs  parse.rs  report.rs  scoring.rs  segment.rs  similarity.rs
src-tauri/src/export/: csv.rs  data.rs  docx.rs  html.rs  json.rs  markdown.rs  mod.rs  shared.rs  xlsx.rs
src-tauri/src/jobs/: mod.rs  progress.rs
src-tauri/src/services/: compare_service.rs  export_service.rs  import_service.rs  mod.rs
src/api/: client.ts  index.ts  types.ts
src/app/: router.tsx
src/components/: DocxView.tsx  ErrorBoundary.tsx  Matrix.tsx  MdView.tsx  NoteEditor.tsx  PdfView.tsx  Sidebar.tsx  Toast.tsx  Topbar.tsx  TxtView.tsx  primitives.tsx
src/data/: mock.ts
src/design/: Icon.tsx  tokens.ts
src/queries/: data.ts  useJobReport.ts
src/screens/: ClusterDetail.tsx  Clusters.tsx  ClustersScreen.tsx  Compare.tsx  CompareSetup.tsx  Dashboard.tsx  DocPreview.tsx  Export.tsx  Home.tsx  JobsList.tsx  Library.tsx  Matrix.tsx  Running.tsx  Scan.tsx  Settings.tsx  Tasks.tsx  WorkspaceList.tsx
src/stores/: progressStore.ts
src/utils/: clusterUi.test.ts  clusterUi.ts  docTag.test.ts  docTag.ts  jobStatus.ts  updater.ts
